dataframe output, so we can see the columns and some example data

--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -37,7 +37,8 @@
     "\n",
     "df = pd.DataFrame(reviews)\n",
     "#convert field 'updated' to datetime \n",
-    "df['updated'] =  pd.to_datetime(df['updated'])"
+    "df['updated'] =  pd.to_datetime(df['updated'])\n",
+    "df"
    ]
   },
   {
@@ -62,6 +63,7 @@
    ],
    "source": [
     "#This will give us a pretty interactive data table\n",
+    "# NOTE: This only works when executed on Jupyter server, not on Github\n",
     "import qgrid\n",
     "qgrid_widget = qgrid.show_grid(df, show_toolbar=True)\n",
     "qgrid_widget"
