--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -18,9 +18,253 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>updated</th>\n",
+       "      <th>id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>summary</th>\n",
+       "      <th>im_votesum</th>\n",
+       "      <th>im_votecount</th>\n",
+       "      <th>im_rating</th>\n",
+       "      <th>im_version</th>\n",
+       "      <th>author</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-05-05 00:05:47-07:00</td>\n",
+       "      <td>http://itunes.apple.com/DE/rss/customerreviews...</td>\n",
+       "      <td>Hoffe das bringt wirklich was</td>\n",
+       "      <td>Gerne habe ich die App installiert und ich hof...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.0.9</td>\n",
+       "      <td>Spitz der Name</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-05-04 21:11:48-07:00</td>\n",
+       "      <td>http://itunes.apple.com/DE/rss/customerreviews...</td>\n",
+       "      <td>Verwendung unklar</td>\n",
+       "      <td>Die App zickt immer wieder mal herum und zeigt...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.0.9</td>\n",
+       "      <td>Tommy_2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-05-04 13:35:10-07:00</td>\n",
+       "      <td>http://itunes.apple.com/DE/rss/customerreviews...</td>\n",
+       "      <td>Kompatibilität nur mit iOS 13</td>\n",
+       "      <td>Kein Support für mein altes iPhone</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0.9</td>\n",
+       "      <td>WurmKlaus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-05-04 09:07:58-07:00</td>\n",
+       "      <td>http://itunes.apple.com/DE/rss/customerreviews...</td>\n",
+       "      <td>Die Zahl steht wieder auf Null</td>\n",
+       "      <td>Wenn man schon keinen direkten Nutzen aus dies...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.0.9</td>\n",
+       "      <td>LemgoC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-05-04 07:48:30-07:00</td>\n",
+       "      <td>http://itunes.apple.com/DE/rss/customerreviews...</td>\n",
+       "      <td>Tage auf Null</td>\n",
+       "      <td>Nach Durchführung Update sind die gespendeten ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0.9</td>\n",
+       "      <td>Alex aus dem Schwabenland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>495</th>\n",
+       "      <td>2020-04-11 05:38:39-07:00</td>\n",
+       "      <td>http://itunes.apple.com/DE/rss/customerreviews...</td>\n",
+       "      <td>0 Tage</td>\n",
+       "      <td>Gute Idee. Aber viele Daten werden nicht gesen...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0.3</td>\n",
+       "      <td>josch711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>496</th>\n",
+       "      <td>2020-04-11 05:38:28-07:00</td>\n",
+       "      <td>http://itunes.apple.com/DE/rss/customerreviews...</td>\n",
+       "      <td>Gerne dabei aber wohl umsonst!</td>\n",
+       "      <td>Leiste gerne meinen Beitrag, doch seit mehrere...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0.3</td>\n",
+       "      <td>SweetMelonie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>497</th>\n",
+       "      <td>2020-04-11 05:26:15-07:00</td>\n",
+       "      <td>http://itunes.apple.com/DE/rss/customerreviews...</td>\n",
+       "      <td>Sinnfrei</td>\n",
+       "      <td>Ich habe jetzt die App von Beginn an und trage...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0.3</td>\n",
+       "      <td>JensHKW</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>498</th>\n",
+       "      <td>2020-04-11 05:23:53-07:00</td>\n",
+       "      <td>http://itunes.apple.com/DE/rss/customerreviews...</td>\n",
+       "      <td>Anzeige Tage Datenspende</td>\n",
+       "      <td>Die App hab ich gerne runtergeladen und gebe m...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.0.3</td>\n",
+       "      <td>dattels</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>499</th>\n",
+       "      <td>2020-04-11 05:06:01-07:00</td>\n",
+       "      <td>http://itunes.apple.com/DE/rss/customerreviews...</td>\n",
+       "      <td>Jeder würde gerne helfen</td>\n",
+       "      <td>Diese App ist eine super Idee und es gibt best...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.0.3</td>\n",
+       "      <td>Trollkarlens lärling</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>500 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      updated  \\\n",
+       "0   2020-05-05 00:05:47-07:00   \n",
+       "1   2020-05-04 21:11:48-07:00   \n",
+       "2   2020-05-04 13:35:10-07:00   \n",
+       "3   2020-05-04 09:07:58-07:00   \n",
+       "4   2020-05-04 07:48:30-07:00   \n",
+       "..                        ...   \n",
+       "495 2020-04-11 05:38:39-07:00   \n",
+       "496 2020-04-11 05:38:28-07:00   \n",
+       "497 2020-04-11 05:26:15-07:00   \n",
+       "498 2020-04-11 05:23:53-07:00   \n",
+       "499 2020-04-11 05:06:01-07:00   \n",
+       "\n",
+       "                                                    id  \\\n",
+       "0    http://itunes.apple.com/DE/rss/customerreviews...   \n",
+       "1    http://itunes.apple.com/DE/rss/customerreviews...   \n",
+       "2    http://itunes.apple.com/DE/rss/customerreviews...   \n",
+       "3    http://itunes.apple.com/DE/rss/customerreviews...   \n",
+       "4    http://itunes.apple.com/DE/rss/customerreviews...   \n",
+       "..                                                 ...   \n",
+       "495  http://itunes.apple.com/DE/rss/customerreviews...   \n",
+       "496  http://itunes.apple.com/DE/rss/customerreviews...   \n",
+       "497  http://itunes.apple.com/DE/rss/customerreviews...   \n",
+       "498  http://itunes.apple.com/DE/rss/customerreviews...   \n",
+       "499  http://itunes.apple.com/DE/rss/customerreviews...   \n",
+       "\n",
+       "                              title  \\\n",
+       "0     Hoffe das bringt wirklich was   \n",
+       "1                 Verwendung unklar   \n",
+       "2     Kompatibilität nur mit iOS 13   \n",
+       "3    Die Zahl steht wieder auf Null   \n",
+       "4                     Tage auf Null   \n",
+       "..                              ...   \n",
+       "495                          0 Tage   \n",
+       "496  Gerne dabei aber wohl umsonst!   \n",
+       "497                        Sinnfrei   \n",
+       "498        Anzeige Tage Datenspende   \n",
+       "499        Jeder würde gerne helfen   \n",
+       "\n",
+       "                                               summary im_votesum  \\\n",
+       "0    Gerne habe ich die App installiert und ich hof...          0   \n",
+       "1    Die App zickt immer wieder mal herum und zeigt...          0   \n",
+       "2                   Kein Support für mein altes iPhone          0   \n",
+       "3    Wenn man schon keinen direkten Nutzen aus dies...          0   \n",
+       "4    Nach Durchführung Update sind die gespendeten ...          0   \n",
+       "..                                                 ...        ...   \n",
+       "495  Gute Idee. Aber viele Daten werden nicht gesen...          0   \n",
+       "496  Leiste gerne meinen Beitrag, doch seit mehrere...          0   \n",
+       "497  Ich habe jetzt die App von Beginn an und trage...          0   \n",
+       "498  Die App hab ich gerne runtergeladen und gebe m...          0   \n",
+       "499  Diese App ist eine super Idee und es gibt best...          0   \n",
+       "\n",
+       "    im_votecount im_rating im_version                     author  \n",
+       "0              0         3      1.0.9             Spitz der Name  \n",
+       "1              0         4      1.0.9                    Tommy_2  \n",
+       "2              0         1      1.0.9                  WurmKlaus  \n",
+       "3              0         2      1.0.9                     LemgoC  \n",
+       "4              0         1      1.0.9  Alex aus dem Schwabenland  \n",
+       "..           ...       ...        ...                        ...  \n",
+       "495            0         1      1.0.3                   josch711  \n",
+       "496            0         1      1.0.3               SweetMelonie  \n",
+       "497            0         1      1.0.3                    JensHKW  \n",
+       "498            0         4      1.0.3                    dattels  \n",
+       "499            0         5      1.0.3       Trollkarlens lärling  \n",
+       "\n",
+       "[500 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import json\n",
