clearer documentation of NLP notebook

--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Natural Language Processing of Reviews\n",
     "\n",
-    "In this notebook we will display some basic NLP characteristics of the App Store reviews (todo: Google Play reviews)"
+    "In this notebook we will have a look at the most common words, bigrams and trigrams."
    ]
   },
   {
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Findings are more insightful for bigrams and trigrams, so we skip the analysis for now."
+    "Findings are more insightful for bigrams and trigrams, so we skip the analysis of words for now."
    ]
   },
   {
