one more todo list item

--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -293,6 +293,7 @@
    "metadata": {},
    "source": [
     "## Todo:\n",
+    "- complete findings\n",
     "- compare unigrams / bigrams / trigrams between both stores\n",
     "- sentiment analysis (positive / negative), compare stores"
    ]
